# TeamTalk

./: .gitignore  README.md
_temp/apache-log4cxx-0.10.0/: config.status  libtool
_temp/apache-log4cxx-0.10.0/src/examples/cpp/.deps/: console.Po
_temp/apache-log4cxx-0.10.0/src/main/cpp/: socketoutputstream.cpp
_temp/apache-log4cxx-0.10.0/src/main/cpp/.deps/: inputstreamreader.Plo  socketoutputstream.Plo
_temp/apache-log4cxx-0.10.0/src/site/doxy/: Doxyfile
_temp/protobuf-2.6.1/: Makefile.in  config.status  libtool
_temp/protobuf-2.6.1/gtest/: Makefile.in  config.status  configure  libtool
_temp/protobuf-2.6.1/gtest/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
_temp/protobuf-2.6.1/src/: Makefile.in
pb/: create.sh
proto/: create.sh
server/: buill_all.sh  run_all.sh
server/docker/dev_env_centos7.4.1708/: Dockerfile  README.md
server/docker/docker-compose/base_image/: Dockerfile
server/docker/docker-compose/db_proxy_server/: Dockerfile
server/docker/docker-compose/file_server/: Dockerfile  file_server.conf
server/docker/docker-compose/http_msg_server/: Dockerfile
server/docker/docker-compose/login_server/: Dockerfile
server/msbuild/: tt_server.sln
server/src/base/: BaseSocket.cpp  BaseSocket.h  CMakeLists.txt  CMakeLists.txt~  ConfigFileReader.cpp  ConfigFileReader.h  EventDispatch.cpp  EventDispatch.h  HttpParserWrapper.cpp  ImPduBase.cpp  ImPduBase.h  ServInfo.cpp  ServInfo.h  Thread.cpp  ThreadPool.cpp  ThreadPool.h  UtilPdu.cpp  UtilPdu.h  base.vc12.vcxproj  base.vcxproj  base.vcxproj.filters  imconn.cpp  imconn.h  netlib.cpp  netlib.h  ostype.h  singleton.h  util.cpp  util.h
server/src/base/Debug/base.tlog/: CL.read.1.tlog  CL.write.1.tlog  base.lastbuildstate  cl.command.1.tlog
server/src/base/pb/protocol/java/com/mogujie/tt/protobuf/: IMBaseDefine.java
server/src/base/pb/protocol/python/IM/: BaseDefine_pb2.py
server/src/db_proxy_server/: CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  HandlerMap.cpp  HandlerMap.h  ProxyConn.cpp  ProxyConn.h  ProxyTask.cpp  ProxyTask.h  SyncCenter.cpp  db_proxy_server.cpp  db_proxy_server.vcxproj
server/src/db_proxy_server/business/: AudioModel.cpp  DepartAction.h  GroupAction.cpp  GroupModel.cpp  InterLogin.cpp  Login.cpp  Login.h  MessageContent.cpp  MessageCounter.h  UserAction.cpp  UserModel.h
server/src/file_server/: CMakeLists.txt  config_util.h  file_client_conn.cpp  file_client_conn.h  file_msg_server_conn.cpp  file_msg_server_conn.h  file_server.cpp  file_server.vcxproj  file_server_util.h  offline_file_util.h  transfer_task.cpp  transfer_task.h  transfer_task_manager.cpp  transfer_task_manager.h
server/src/http_msg_server/: DBServConn.cpp  DBServConn.h  HttpConn.cpp  HttpConn.h  HttpPdu.cpp  HttpPdu.h  HttpQuery.cpp  HttpQuery.h  RouteServConn.cpp  RouteServConn.h  http_msg_server.cpp  http_msg_server.vcxproj
server/src/login_server/: Dockerfile  HttpConn.cpp  HttpConn.h  LoginConn.cpp  LoginConn.h  login_server.cpp  login_server.vcxproj  loginserver.conf  start.sh  tt_login_server.service
server/src/msfs/: CMakeLists.txt  FileManager.cpp  HttpConn.cpp  HttpConn.h  main.cpp  msfs.vcxproj  msfs.vcxproj.filters
server/src/msg_server/: AttachData.cpp  AttachData.h  CMakeLists.txt  DBServConn.cpp  DBServConn.h  FileHandler.cpp  FileHandler.h  FileServConn.cpp  FileServConn.h  GroupChat.cpp  GroupChat.h  ImUser.cpp  ImUser.h  LoginServConn.cpp  LoginServConn.h  MsgConn.cpp  MsgConn.h  PushServConn.cpp  PushServConn.h  RouteServConn.cpp  RouteServConn.h  msg_server.conf  msg_server.cpp  msg_server.vcxproj  msg_server.vcxproj.filters
server/src/push_server/: CMakeLists.txt  push_app.cpp  push_define.h  push_server.vcxproj
server/src/push_server/socket/: socket_io_define.h
server/src/route_server/: CMakeLists.txt  RouteConn.cpp  UserInfo.cpp  UserInfo.h  route_server.cpp  route_server.vcxproj
